--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,14 @@ body {
 .jumbotron {
   background-color: #25928d;
   color: #dddddd;
-  margin-bottom: ;
+  margin-bottom: 5px;
   padding: 10px 20px;
   border-radius: 3%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.title {
+  font-size: 18px;
 }
 
 .nav-bar {
@@ -24,7 +28,8 @@ body {
 }
 
 .bar-item:hover {
-  color: orange;
+  color: #f1b825;
+  text-decoration: none;
 }
 
 .cover-photo {
