--- a/css/styles.css
+++ b/css/styles.css
@@ -2,28 +2,36 @@ body {
   background-color: #d3d3d3;
 }
 
+#index-body {
+  background-image: url("img/index-cover.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .jumbotron {
   background-color: #25928d;
   color: #dddddd;
   margin-bottom: 5px;
   padding: 10px 20px;
-  border-radius: 3%;
+  /* border-radius: 3%; */
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .title {
   font-size: 18px;
+  margin-bottom: 0;
 }
 
 .nav-bar {
-  float: left;
+  display: flex;
+  justify-content: start;
   margin-bottom: 30px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: larger;
 }
 
 .bar-item {
-  padding: 0 40px;
+  padding: 0 20px;
   color: #25928d;
 }
 
