--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ body {
 
 .nav-bar {
   display: flex;
-  justify-content: start;
+  justify-content: space-evenly;
   margin-bottom: 30px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: larger;
@@ -40,35 +40,42 @@ body {
   text-decoration: none;
 }
 
-.img-container {
-  border-radius: 60%;
-  display: block;
-  width: 75%;
+div.col-md-6 {
+  /* margin-bottom: -40px; */
+  padding: 0;
+}
+
+img {
+  width: 100%;
   height: auto;
-  border: solid 3px #25928d;
 }
 
 .top-left-img {
-  width: 60%;
-  height: auto;
-  margin: 0;
-  display: inline-block;
+  margin-top: 30px;
 }
 
 .top-right-img {
-  width: 60%;
-  height: auto;
-  display: inline-block;
+  width: 86%;
+  margin-top: 30px;
 }
 
-.bottom-img {
-  width: 60%;
+/* .bottom-left-img {
+  width: 80%;
   height: auto;
   margin: 0;
 }
 
+.bottom-right-img {
+  width: 80%;
+  height: auto;
+  margin: 0;
+}  */
+
 .photo-container {
-  
+  border: #25928d 5px solid;
+  border-radius: 20%;
+  width: 80%;
+  margin: auto;
 }
 
 .row {
@@ -110,10 +117,4 @@ dd {
   height: auto;
   border: solid 3px #25928d;
   display: block;
-}
-
-.carousel {
-  width: 50%;
-  height: auto;
-  clear: both;
 }
