--- a/css/styles.css
+++ b/css/styles.css
@@ -40,42 +40,20 @@ body {
   text-decoration: none;
 }
 
-div.col-md-6 {
-  /* margin-bottom: -40px; */
-  padding: 0;
+.img-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  overflow: hidden;
+  border: 10px solid #25928d;
+  border-radius: 60%;
+  width: 60%;
+  margin: auto;
 }
 
 img {
-  width: 100%;
+  width: 50%;
   height: auto;
-}
-
-.top-left-img {
-  margin-top: 30px;
-}
-
-.top-right-img {
-  width: 86%;
-  margin-top: 30px;
-}
-
-/* .bottom-left-img {
-  width: 80%;
-  height: auto;
-  margin: 0;
-}
-
-.bottom-right-img {
-  width: 80%;
-  height: auto;
-  margin: 0;
-}  */
-
-.photo-container {
-  border: #25928d 5px solid;
-  border-radius: 20%;
-  width: 80%;
-  margin: auto;
 }
 
 .row {
