--- a/css/styles.css
+++ b/css/styles.css
@@ -17,9 +17,13 @@ body {
   padding: 10px 20px;
   /* border-radius: 3%; */
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  display: flex;
-  justify-content: center;
   opacity: .7;
+}
+
+.main-header {
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
 }
 
 .header {
@@ -44,7 +48,7 @@ i {
 
 .nav-bar {
   display: flex;
-  justify-content: space-evenly;
+  justify-content:start;
   margin-bottom: 30px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: larger;
@@ -53,6 +57,7 @@ i {
 .current-item {
   color:#5988c5;
   text-decoration: overline;
+  padding: 0 20px;
 }
 
 .bar-item {
@@ -120,4 +125,8 @@ dd {
   height: auto;
   border: solid 3px #25928d;
   display: block;
+}
+
+.hidden {
+  display: none;
 }
