--- a/css/styles.css
+++ b/css/styles.css
@@ -13,22 +13,29 @@ body {
 .jumbotron {
   background-color: #25928d;
   color: #dddddd;
-  margin-bottom: 5px;
-  padding: 10px 20px;
-  /* border-radius: 3%; */
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  opacity: .7;
-}
-
-.main-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  max-height: 340px;
+  overflow-y: auto; 
   display: flex;
-  justify-content:space-around;
+  justify-content: space-between;
   align-items: center;
+  font-family: 'Roboto Mono', monospace;
+  padding: 1rem;
+  padding-right: 6rem;
 }
 
-.header {
-  display: inline-block;
-}
+/* #contactLinks {
+  display: flex;
+  justify-content: space-between;
+  width: 10%;
+  align-items: center;
+  flex
+} */
 
 .title {
   font-size: 18px;
@@ -46,51 +53,16 @@ i {
   color: black;
 }
 
-.nav-bar {
-  display: flex;
-  justify-content:start;
-  margin-bottom: 30px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  font-size: larger;
-}
-
-.current-item {
-  color:#5988c5;
-  text-decoration: overline;
-  cursor: grabbing;
-  padding: 0 20px;
-}
-
-.bar-item {
-  padding: 0 20px;
-  color: #25928d;
-  cursor: grab;
-}
-
-.bar-item:hover {
-  color: #5988c5;
-  text-decoration: overline;
-  cursor: grab;
-}
-
 .photos {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   overflow: hidden;
   border: 10px solid #25928dc1;
-  border-radius: 60%;
-  width: 60%;
+  /* border-radius: 60%; */
+  width: fit-content;
   margin: auto;
 }
-
-/* #about {
-  display: none;
-}
-
-#projects {
-  display: none;
-} */
 
 img {
   width: 50%;
