--- a/css/styles.css
+++ b/css/styles.css
@@ -22,25 +22,40 @@ body {
   max-height: 340px;
   overflow-y: auto; 
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   font-family: 'Roboto Mono', monospace;
   padding: 1rem;
-  padding-right: 6rem;
+  padding-right: auto;
+  padding-left: auto;
 }
 
-/* #contactLinks {
-  display: flex;
-  justify-content: space-between;
-  width: 10%;
-  align-items: center;
-  flex
-} */
-
 .title {
-  font-size: 18px;
-  display: inline-block;
-  margin-bottom: 0;
+  font-size: 1.2rem;
+  /* margin-right: 2rem; */
+  align-self: flex-end;
+  justify-self: left;
+}
+
+.header {
+  /* margin-right: 2rem; */
+}
+
+#aboutContainer {
+  margin-top: 15%;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 1.2rem;
+  margin-bottom: 10%;
+}
+
+.aboutBody {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.aboutPhoto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 i:hover {
@@ -53,33 +68,20 @@ i {
   color: black;
 }
 
-.photos {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  overflow: hidden;
-  border: 10px solid #25928dc1;
-  /* border-radius: 60%; */
-  width: fit-content;
-  margin: auto;
-}
-
-img {
-  width: 50%;
-  height: auto;
+.bioPic {
+  width: 100%;
 }
 
 .row {
   clear: both;
 }
 
-.col {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+span {
   color:#25928d;
 }
 
-span {
-  color:#25928d;
+#projects {
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 .about-body::first-line {
@@ -106,7 +108,6 @@ a {
 
 dd {
   color: #5988c5;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 18px;
 }
 
