--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #d3d3d3;
+  background-color:#3d3e3e;
   width: 90%;
   margin: auto;
 }
@@ -11,7 +11,7 @@ body {
 }
 
 .jumbotron {
-  background-color: #25928d;
+  background-color:#373838;
   color: #dddddd;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   position: fixed;
@@ -28,6 +28,8 @@ body {
   padding: 1rem;
   padding-right: auto;
   padding-left: auto;
+  border-bottom: #27cec5 .1rem solid;
+  border-top: #27cec5 .1rem solid;
 }
 
 .title {
@@ -46,6 +48,7 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 1.2rem;
   margin-bottom: 10%;
+  color:#dddddd;
 }
 
 .aboutBody {
@@ -58,14 +61,15 @@ body {
   margin-bottom: auto;
 }
 
+
 i:hover {
-  color: #AEC6CF;
+  color:#27cec5;
   transition: 0.4s;
   cursor: pointer;
 }
 
 i {
-  color: black;
+  color: #AEC6CF;
 }
 
 .bioPic {
