--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,14 @@ span {
   color:#dddddd;
 }
 
+.quotesGif {
+  margin: auto;
+}
+
+.row {
+  margin-bottom: 10%;
+}
+
 .about-body::first-line {
   color: #5988c5;
 }
@@ -106,20 +114,52 @@ li {
   color: #5988c5;
 }
 
-a:hover {
+/* a:hover {
   color:#f1b825;
   text-decoration: none;
-}
+} */
 
 a {
   text-decoration: none;
+  color: #ffffff;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 1.2rem;
+} 
+
+a:hover {
+   color: #ffffff;
 }
 
-.proj-list {
-  color:#25928d;
-}
+button {
+   border-top: 1px solid #000000;
+   background: #27cec6;
+   background: -webkit-gradient(linear, left top, left bottom, from(#25928d), to(#27cec6));
+   background: -webkit-linear-gradient(top, #25928d, #27cec6);
+   background: -moz-linear-gradient(top, #25928d, #27cec6);
+   background: -ms-linear-gradient(top, #25928d, #27cec6);
+   background: -o-linear-gradient(top, #25928d, #27cec6);
+   padding: 7px 14px;
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   border-radius: 20px;
+   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
+   box-shadow: rgba(0,0,0,1) 0 1px 0;
+   text-shadow: rgba(0,0,0,.4) 0 1px 0;
+   color: #dddddd;
+   text-decoration: none;
+   vertical-align: middle;
+   }
+button:hover {
+   background: #27cec6;
+   color: #ffffff;
+   }
+button:active {
+   border-top-color: #1b435e;
+   background: #1b435e;
+   }
 
-dd {
+/* dd {
   color: #5988c5;
   font-size: 18px;
 }
@@ -134,7 +174,7 @@ dd {
 
 .hidden {
   display: none;
-}
+} */
 
 em {
   font-weight: bold;
