--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,7 @@ body {
 .aboutBody {
   margin-top: auto;
   margin-bottom: auto;
+  border-bottom: #27cec5 .1rem solid;
 }
 
 .aboutPhoto {
@@ -95,6 +96,7 @@ span {
   font-size: 1.2rem;
   margin-bottom: 10%;
   color:#dddddd;
+  border-bottom: #27cec5 .1rem solid;;
 }
 
 .quotesGif {
@@ -104,20 +106,6 @@ span {
 .row {
   margin-bottom: 10%;
 }
-
-.about-body::first-line {
-  color: #5988c5;
-}
-
-li {
-  font-size: 18px;
-  color: #5988c5;
-}
-
-/* a:hover {
-  color:#f1b825;
-  text-decoration: none;
-} */
 
 a {
   text-decoration: none;
@@ -130,33 +118,29 @@ a:hover {
    color: #ffffff;
 }
 
+.proj-list {
+  color: #ffffff;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 1.2rem;
+}
+
 button {
-   border-top: 1px solid #000000;
-   background: #27cec6;
-   background: -webkit-gradient(linear, left top, left bottom, from(#25928d), to(#27cec6));
-   background: -webkit-linear-gradient(top, #25928d, #27cec6);
-   background: -moz-linear-gradient(top, #25928d, #27cec6);
-   background: -ms-linear-gradient(top, #25928d, #27cec6);
-   background: -o-linear-gradient(top, #25928d, #27cec6);
+   background: #27cec5;
+   color: #ffffff;
    padding: 7px 14px;
    -webkit-border-radius: 20px;
    -moz-border-radius: 20px;
    border-radius: 20px;
-   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   color: #dddddd;
    text-decoration: none;
    vertical-align: middle;
    }
 button:hover {
-   background: #27cec6;
+   background: #27cec5;
    color: #ffffff;
    }
 button:active {
-   border-top-color: #1b435e;
-   background: #1b435e;
+   border-top-color:#25928d;
+   background: #25928d;
    }
 
 /* dd {
@@ -178,13 +162,6 @@ button:active {
 
 em {
   font-weight: bold;
-}
-
-#about {
-  width: 80%;
-  font-size: 18px;
-  color:#25928d;
-  margin: auto;
 }
 
 i {
