--- a/css/styles.css
+++ b/css/styles.css
@@ -69,12 +69,13 @@ body {
 
 i:hover {
   color:#27cec5;
-  transition: 0.4s;
+  transition: 1s;
   cursor: pointer;
 }
 
 i {
   color: #AEC6CF;
+  margin: auto;
 }
 
 .bioPic {
@@ -97,17 +98,18 @@ i {
 
 .quotesGif {
   margin: auto;
+  width: 80%;
 }
 
 .firstEdPhoto {
   margin: auto;
-  width: 100%;
+  width: 80%;
   height: auto;
+  border: #25928d .1rem solid;
 }
 
 .row {
-  margin-top: 5%;
-
+  margin-top: 15%;
 }
 
 a {
@@ -121,54 +123,44 @@ a:hover {
    color: #ffffff;
 }
 
+
+
 .proj-list {
   color: #ffffff;
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 1.2rem;
 }
 
+.projTitle {
+  text-decoration: underline;
+}
+
 button {
-   background: #27cec5;
-   color: #ffffff;
-   padding: 7px 14px;
-   -webkit-border-radius: 20px;
-   -moz-border-radius: 20px;
-   border-radius: 20px;
-   text-decoration: none;
-   vertical-align: middle;
-   }
+  background: #27cec5;
+  color: #ffffff;
+  padding: 7px 14px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  text-decoration: none;
+  vertical-align: middle;
+  margin-bottom: 2%;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 1.2rem;
+}
+
 button:hover {
-   background: #27cec5;
-   color: #ffffff;
-   }
+  background: #27cec5;
+  color: #ffffff;
+}
+
 button:active {
-   border-top-color:#25928d;
-   background: #25928d;
-   }
-
-/* dd {
-  color: #5988c5;
-  font-size: 18px;
+  border-top-color:#25928d;
+  background: #25928d;
 }
 
-.d-block {
-  border-radius: 50%;
-  width: 40%;
-  height: auto;
-  border: solid 3px #25928d;
-  display: block;
-}
-
-.hidden {
-  display: none;
-} */
-
-em {
-  font-weight: bold;
-}
-
-i {
-  margin: auto;
+.quotesGif {
+  border: #25928d .1rem solid;
 }
 
 @media (min-width: 30px) and (max-width: 474px) {
