--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,12 @@
+html {
+  font-family: 'Roboto Mono', monospace;
+}
+
 body {
   background-color:#3d3e3e;
   width: 90%;
   margin: auto;
+  font-family: 'Roboto Mono', monospace;
 }
 
 #index-body {
@@ -13,7 +18,6 @@ body {
 .jumbotron {
   background-color:#373838;
   color: #dddddd;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   position: fixed;
   top: 0;
   left: 0;
@@ -112,7 +116,7 @@ i {
   margin-top: 15%;
 }
 
-a {
+a:active {
   text-decoration: none;
   color: #ffffff;
   font-family: 'Roboto Condensed', sans-serif;
